--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -5,14 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="bau.com.myexpensesapp.activities.ExpenseActivity"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
+
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="0dp"
+        android:background="@drawable/piggysplash"
+        android:layout_weight="0.8">
 
-        >
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,26 +30,45 @@
             android:text=""
             android:layout_margin="20dp"/>
 
-
         </LinearLayout>
 
+
     </ScrollView>
-
-
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="0.15">
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_add_expense_floating"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="25dp">
-
-
-        <Button android:id="@+id/btn_add_new_expense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="+"
-
-            />
-
+        android:layout_gravity="right"
+        android:src="@drawable/piggysplash"
+        android:layout_margin="15dp"
+        />
     </LinearLayout>
 
-
 </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_margin="25dp">-->
+
+
+
+
+
+
+        <!--<Button android:id="@+id/btn_add_new_expense"-->
+            <!--android:layout_width="50dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="+"-->
+            <!--android:background="@drawable/btn_circular"-->
+
+            <!--/>-->
+
+    <!--</LinearLayout>-->
+
