--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -66,7 +66,7 @@
     <Button android:id="@+id/btn_add_expense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Expense"
+        android:text="Add Expense/View all expenses"
         android:onClick="createExpense"
         android:background="@drawable/btn_circular"
         android:layout_margin="50dp"
