--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -66,13 +66,21 @@
     <Button android:id="@+id/btn_add_expense"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Expense/View all expenses"
+        android:text="Add Expense"
         android:onClick="createExpense"
         android:background="@drawable/btn_circular"
         android:layout_margin="50dp"
         android:layout_gravity="center"
 
-
+        />
+    <Button android:id="@+id/btn_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:background="@drawable/btn_circular"
+        android:layout_margin="50dp"
+        android:layout_gravity="center"
+        android:onClick="goToExpensesScreen"
         />
 
 
