--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -7,90 +7,48 @@
     tools:context="bau.com.myexpensesapp.activities.ExpenseActivity"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_user_expense"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.85"
+        android:text=" "
+        android:layout_margin="20dp"
+        android:background="@drawable/piggysplash"
+        android:scrollbars="vertical" />
 
-
-    <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:background="@drawable/piggysplash"-->
-        <!--android:layout_weight="0.8">-->
-
-
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="vertical"-->
-            <!--&gt;-->
-
-        <TextView
-            android:id="@+id/tv_user_expense"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.85"
-            android:text=" "
-            android:layout_margin="20dp"
-            android:background="@drawable/piggysplash"
-            android:scrollbars="vertical"
-
-            />
-        <!--</LinearLayout>-->
-
-
-    <!--</ScrollView>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
         android:layout_weight="0.15">
 
-    <EditText android:id="@+id/et_user_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"/>
+        <EditText android:id="@+id/et_user_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"/>
 
-    <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_delete_expense_floating"
+        <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btn_delete_expense_floating"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:src="@drawable/btn_circular"
+                android:layout_margin="15dp"
+                android:onClick="deleteExpense" />
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_add_expense_floating"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:src="@drawable/btn_circular"
+            android:src="@drawable/piggysplash"
             android:layout_margin="15dp"
-            android:onClick="deleteExpense"
+            android:onClick="openAddExpenseScreen" />
 
-            />
-
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add_expense_floating"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:src="@drawable/piggysplash"
-        android:layout_margin="15dp"
-        android:onClick="openAddExpenseScreen"
-
-        />
     </LinearLayout>
 
 </LinearLayout>
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_margin="25dp">-->
 
-
-
-
-
-
-        <!--<Button android:id="@+id/btn_add_new_expense"-->
-            <!--android:layout_width="50dp"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="+"-->
-            <!--android:background="@drawable/btn_circular"-->
-
-            <!--/>-->
-
-    <!--</LinearLayout>-->
 
